# simpleroute

./: README.md  pyproject.toml
src/simpleroute/: __init__.py  router.py
